--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Live Malam</title>
+  <style>
+    body {
+      background: #000;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      color: #fff;
+    }
+    table {
+      width: 100%;
+      max-width: 600px;
+      margin: auto;
+      border-collapse: collapse;
+      border: 2px solid #00bfff;
+    }
+    th, td {
+      border: 1px solid #00bfff;
+      padding: 12px;
+      text-align: center;
+      font-size: 16px;
+    }
+    th {
+      background: #001f3f;
+      color: #fff;
+      text-transform: uppercase;
+    }
+    td {
+      background: #111;
+      color: #00bfff;
+      font-weight: bold;
+    }
+    .judul {
+      background: #001f3f;
+      color: #fff;
+      font-size: 20px;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+    .loading img {
+      width: 20px;
+      height: 20px;
+    }
+  </style>
+</head>
+<body>
+  <table>
+    <!-- Judul -->
+    <tr>
+      <th class="judul" colspan="2">LIVE MALAM</th>
+    </tr>
+    <!-- Header -->
+    <tr>
+      <th>Pasar</th>
+      <th>Hasil</th>
+    </tr>
+    <!-- Data -->
+<tr><td>MAROCCO QUATRO 00 00:01</td><td>8951</td></tr>
+    <tr><td>KENTUCKY MID 00:28</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+<tr><td>TEXAS DAY 00:30</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+    <tr><td>FLORIDA MID 00:35</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+<tr><td>VIRGINIA DAY 01:01</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+    <tr><td>HUAHIN MID 01:08</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+    <tr><td>NEW YORK MID 01:30</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+    <tr><td>CAROLINA DAY 02:00</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+    <tr><td>BRUNEI 02:45</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+    <tr><td>OREGON 03 03:00</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+<tr><td>MAROCCO QUATRO 03 03:03</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+  </table>
+</body>
+</html>
