--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -59,7 +60,7 @@
       <th>Hasil</th>
     </tr>
     <!-- Data -->
-<tr><td>MAROCCO QUATRO 00 00:01</td><td>8951</td></tr>
+<tr><td>MAROCCO QUATRO 00 00:01</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
     <tr><td>KENTUCKY MID 00:28</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
 <tr><td>TEXAS DAY 00:30</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
     <tr><td>FLORIDA MID 00:35</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
