--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </tr>
     <!-- Data -->
 <tr><td>MAROCCO QUATRO 00 00:01</td><td>0517</td></tr>
-    <tr><td>KENTUCKY MID 00:28</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
+    <tr><td>KENTUCKY MID 00:28</td><td>2265</td></tr>
 <tr><td>TEXAS DAY 00:30</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
     <tr><td>FLORIDA MID 00:35</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
 <tr><td>VIRGINIA DAY 01:01</td><td class="loading"><img src="https://i.gifer.com/ZZ5H.gif" alt="loading"></td></tr>
